objects/Configuration_Execution__c.object
<CustomObject>
    <fields>
        <fullName>Configuration_Steps_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Steps Definition</label>
        <referenceTo>Configuration_Steps_Definition__c</referenceTo>
        <relationshipLabel>Configuration Executions</relationshipLabel>
        <relationshipName>Configuration_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Configuration Executions</relationshipLabel>
        <relationshipName>Configuration_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Job Execution</label>
        <referenceTo>copado1p__Platform_Job_Execution__c</referenceTo>
        <relationshipLabel>Configuration Executions</relationshipLabel>
        <relationshipName>Configuration_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playground__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playground</label>
        <referenceTo>Playground__c</referenceTo>
        <relationshipLabel>Configuration Executions</relationshipLabel>
        <relationshipName>Configuration_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Execution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Configuration Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>